compiler/parser/sql_parser.go
// Code generated from SQLParser.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // SQLParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "'/*'", "", "';'", "", "", "':'", "", "", "'...'", "'@name'", "'@param'",
	"'@paramStructName'", "'@one'", "'@many'", "'@exec'", "'@notNullParams'",
	"'@returnValueName'", "'('", "')'", "'.'", "','", "", "'*/'", "'::'",
}
var symbolicNames = []string{
	"", "ID", "OPEN_COMMENT", "WORD", "EOF_STATEMENT", "WSL", "STRING", "PARAM_MARK",
	"LINE_COMMENT", "WS", "SPREAD", "NAME_TAG", "TYPE_TAG", "PARAM_STRUCT_NAME_TAG",
	"ONE_TAG", "MANY_TAG", "EXEC_TAG", "NOT_NULL_PARAMS_TAG", "RETURN_VALUE_NAME_TAG",
	"OB", "CB", "DOT", "COMMA", "ANY", "CLOSE_COMMENT", "CAST",
}

var ruleNames = []string{
	"input", "query", "queryDef", "statement", "lineComment", "statementBody",
	"word", "param", "paramId", "returnValueNameId", "paramStructNameId", "nameTag",
	"paramTag", "paramStructNameTag", "modeTag", "notNullParamsTag", "returnValueName",
	"anyTag", "transformRule", "spreadTransform", "structTransform", "structSpreadTransform",
	"notNullTransform", "key", "notNullParam", "queryName", "paramName",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SQLParser struct {
	*antlr.BaseParser
}

func NewSQLParser(input antlr.TokenStream) *SQLParser {
	this := new(SQLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SQLParser.g4"

	return this
}

// SQLParser tokens.
const (
	SQLParserEOF                   = antlr.TokenEOF
	SQLParserID                    = 1
	SQLParserOPEN_COMMENT          = 2
	SQLParserWORD                  = 3
	SQLParserEOF_STATEMENT         = 4
	SQLParserWSL                   = 5
	SQLParserSTRING                = 6
	SQLParserPARAM_MARK            = 7
	SQLParserLINE_COMMENT          = 8
	SQLParserWS                    = 9
	SQLParserSPREAD                = 10
	SQLParserNAME_TAG              = 11
	SQLParserTYPE_TAG              = 12
	SQLParserPARAM_STRUCT_NAME_TAG = 13
	SQLParserONE_TAG               = 14
	SQLParserMANY_TAG              = 15
	SQLParserEXEC_TAG              = 16
	SQLParserNOT_NULL_PARAMS_TAG   = 17
	SQLParserRETURN_VALUE_NAME_TAG = 18
	SQLParserOB                    = 19
	SQLParserCB                    = 20
	SQLParserDOT                   = 21
	SQLParserCOMMA                 = 22
	SQLParserANY                   = 23
	SQLParserCLOSE_COMMENT         = 24
	SQLParserCAST                  = 25
)

// SQLParser rules.
const (
	SQLParserRULE_input                 = 0
	SQLParserRULE_query                 = 1
	SQLParserRULE_queryDef              = 2
	SQLParserRULE_statement             = 3
	SQLParserRULE_lineComment           = 4
	SQLParserRULE_statementBody         = 5
	SQLParserRULE_word                  = 6
	SQLParserRULE_param                 = 7
	SQLParserRULE_paramId               = 8
	SQLParserRULE_returnValueNameId     = 9
	SQLParserRULE_paramStructNameId     = 10
	SQLParserRULE_nameTag               = 11
	SQLParserRULE_paramTag              = 12
	SQLParserRULE_paramStructNameTag    = 13
	SQLParserRULE_modeTag               = 14
	SQLParserRULE_notNullParamsTag      = 15
	SQLParserRULE_returnValueName       = 16
	SQLParserRULE_anyTag                = 17
	SQLParserRULE_transformRule         = 18
	SQLParserRULE_spreadTransform       = 19
	SQLParserRULE_structTransform       = 20
	SQLParserRULE_structSpreadTransform = 21
	SQLParserRULE_notNullTransform      = 22
	SQLParserRULE_key                   = 23
	SQLParserRULE_notNullParam          = 24
	SQLParserRULE_queryName             = 25
	SQLParserRULE_paramName             = 26
)

// IInputContext is an interface to support dynamic dispatch.
type IInputContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsInputContext differentiates from other interfaces.
	IsInputContext()
}

type InputContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInputContext() *InputContext {
	var p = new(InputContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_input
	return p
}

func (*InputContext) IsInputContext() {}

func NewInputContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InputContext {
	var p = new(InputContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_input

	return p
}

func (s *InputContext) GetParser() antlr.Parser { return s.parser }

func (s *InputContext) Query() IQueryContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IQueryContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IQueryContext)
}

func (s *InputContext) EOF() antlr.TerminalNode {
	return s.GetToken(SQLParserEOF, 0)
}

func (s *InputContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InputContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InputContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.EnterInput(s)
	}
}

func (s *InputContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.ExitInput(s)
	}
}

func (p *SQLParser) Input() (localctx IInputContext) {
	localctx = NewInputContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SQLParserRULE_input)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		p.Query()
	}
	{
		p.SetState(55)
		p.Match(SQLParserEOF)
	}

	return localctx
}

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_query
	return p
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) QueryDef() IQueryDefContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IQueryDefContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IQueryDefContext)
}

func (s *QueryContext) Statement() IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.EnterQuery(s)
	}
}

func (s *QueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.ExitQuery(s)
	}
}

func (p *SQLParser) Query() (localctx IQueryContext) {
	localctx = NewQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SQLParserRULE_query)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(57)
		p.QueryDef()
	}
	{
		p.SetState(58)
		p.Statement()
	}

	return localctx
}

// IQueryDefContext is an interface to support dynamic dispatch.
type IQueryDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQueryDefContext differentiates from other interfaces.
	IsQueryDefContext()
}

type QueryDefContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryDefContext() *QueryDefContext {
	var p = new(QueryDefContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_queryDef
	return p
}

func (*QueryDefContext) IsQueryDefContext() {}

func NewQueryDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryDefContext {
	var p = new(QueryDefContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_queryDef

	return p
}

func (s *QueryDefContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryDefContext) OPEN_COMMENT() antlr.TerminalNode {
	return s.GetToken(SQLParserOPEN_COMMENT, 0)
}

func (s *QueryDefContext) CLOSE_COMMENT() antlr.TerminalNode {
	return s.GetToken(SQLParserCLOSE_COMMENT, 0)
}

func (s *QueryDefContext) AllAnyTag() []IAnyTagContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAnyTagContext)(nil)).Elem())
	var tst = make([]IAnyTagContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAnyTagContext)
		}
	}

	return tst
}

func (s *QueryDefContext) AnyTag(i int) IAnyTagContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAnyTagContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAnyTagContext)
}

func (s *QueryDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.EnterQueryDef(s)
	}
}

func (s *QueryDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.ExitQueryDef(s)
	}
}

func (p *SQLParser) QueryDef() (localctx IQueryDefContext) {
	localctx = NewQueryDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SQLParserRULE_queryDef)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(60)
		p.Match(SQLParserOPEN_COMMENT)
	}
	p.SetState(64)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SQLParserNAME_TAG)|(1<<SQLParserTYPE_TAG)|(1<<SQLParserPARAM_STRUCT_NAME_TAG)|(1<<SQLParserONE_TAG)|(1<<SQLParserMANY_TAG)|(1<<SQLParserEXEC_TAG)|(1<<SQLParserNOT_NULL_PARAMS_TAG)|(1<<SQLParserRETURN_VALUE_NAME_TAG))) != 0 {
		{
			p.SetState(61)
			p.AnyTag()
		}

		p.SetState(66)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(67)
		p.Match(SQLParserCLOSE_COMMENT)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) StatementBody() IStatementBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementBodyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatementBodyContext)
}

func (s *StatementContext) EOF_STATEMENT() antlr.TerminalNode {
	return s.GetToken(SQLParserEOF_STATEMENT, 0)
}

func (s *StatementContext) LineComment() ILineCommentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILineCommentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILineCommentContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *SQLParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SQLParserRULE_statement)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(70)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SQLParserLINE_COMMENT {
		{
			p.SetState(69)
			p.LineComment()
		}

	}
	{
		p.SetState(72)
		p.StatementBody()
	}
	{
		p.SetState(73)
		p.Match(SQLParserEOF_STATEMENT)
	}

	return localctx
}

// ILineCommentContext is an interface to support dynamic dispatch.
type ILineCommentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLineCommentContext differentiates from other interfaces.
	IsLineCommentContext()
}

type LineCommentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLineCommentContext() *LineCommentContext {
	var p = new(LineCommentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_lineComment
	return p
}

func (*LineCommentContext) IsLineCommentContext() {}

func NewLineCommentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LineCommentContext {
	var p = new(LineCommentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_lineComment

	return p
}

func (s *LineCommentContext) GetParser() antlr.Parser { return s.parser }

func (s *LineCommentContext) AllLINE_COMMENT() []antlr.TerminalNode {
	return s.GetTokens(SQLParserLINE_COMMENT)
}

func (s *LineCommentContext) LINE_COMMENT(i int) antlr.TerminalNode {
	return s.GetToken(SQLParserLINE_COMMENT, i)
}

func (s *LineCommentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LineCommentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LineCommentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.EnterLineComment(s)
	}
}

func (s *LineCommentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.ExitLineComment(s)
	}
}

func (p *SQLParser) LineComment() (localctx ILineCommentContext) {
	localctx = NewLineCommentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SQLParserRULE_lineComment)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(75)
		p.Match(SQLParserLINE_COMMENT)
	}
	p.SetState(79)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(76)
				p.Match(SQLParserLINE_COMMENT)
			}

		}
		p.SetState(81)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())
	}

	return localctx
}

// IStatementBodyContext is an interface to support dynamic dispatch.
type IStatementBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementBodyContext differentiates from other interfaces.
	IsStatementBodyContext()
}

type StatementBodyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementBodyContext() *StatementBodyContext {
	var p = new(StatementBodyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_statementBody
	return p
}

func (*StatementBodyContext) IsStatementBodyContext() {}

func NewStatementBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementBodyContext {
	var p = new(StatementBodyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_statementBody

	return p
}

func (s *StatementBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementBodyContext) AllWord() []IWordContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IWordContext)(nil)).Elem())
	var tst = make([]IWordContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IWordContext)
		}
	}

	return tst
}

func (s *StatementBodyContext) Word(i int) IWordContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWordContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IWordContext)
}

func (s *StatementBodyContext) AllParam() []IParamContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IParamContext)(nil)).Elem())
	var tst = make([]IParamContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IParamContext)
		}
	}

	return tst
}

func (s *StatementBodyContext) Param(i int) IParamContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IParamContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IParamContext)
}

func (s *StatementBodyContext) AllLineComment() []ILineCommentContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ILineCommentContext)(nil)).Elem())
	var tst = make([]ILineCommentContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ILineCommentContext)
		}
	}

	return tst
}

func (s *StatementBodyContext) LineComment(i int) ILineCommentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILineCommentContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ILineCommentContext)
}

func (s *StatementBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementBodyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.EnterStatementBody(s)
	}
}

func (s *StatementBodyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.ExitStatementBody(s)
	}
}

func (p *SQLParser) StatementBody() (localctx IStatementBodyContext) {
	localctx = NewStatementBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, SQLParserRULE_statementBody)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(82)
		p.Word()
	}
	p.SetState(88)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SQLParserID)|(1<<SQLParserWORD)|(1<<SQLParserSTRING)|(1<<SQLParserPARAM_MARK)|(1<<SQLParserLINE_COMMENT))) != 0 {
		p.SetState(86)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case SQLParserPARAM_MARK:
			{
				p.SetState(83)
				p.Param()
			}

		case SQLParserID, SQLParserWORD, SQLParserSTRING:
			{
				p.SetState(84)
				p.Word()
			}

		case SQLParserLINE_COMMENT:
			{
				p.SetState(85)
				p.LineComment()
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(90)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IWordContext is an interface to support dynamic dispatch.
type IWordContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsWordContext differentiates from other interfaces.
	IsWordContext()
}

type WordContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyWordContext() *WordContext {
	var p = new(WordContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_word
	return p
}

func (*WordContext) IsWordContext() {}

func NewWordContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *WordContext {
	var p = new(WordContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_word

	return p
}

func (s *WordContext) GetParser() antlr.Parser { return s.parser }

func (s *WordContext) WORD() antlr.TerminalNode {
	return s.GetToken(SQLParserWORD, 0)
}

func (s *WordContext) ID() antlr.TerminalNode {
	return s.GetToken(SQLParserID, 0)
}

func (s *WordContext) STRING() antlr.TerminalNode {
	return s.GetToken(SQLParserSTRING, 0)
}

func (s *WordContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WordContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *WordContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.EnterWord(s)
	}
}

func (s *WordContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.ExitWord(s)
	}
}

func (p *SQLParser) Word() (localctx IWordContext) {
	localctx = NewWordContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, SQLParserRULE_word)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(91)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SQLParserID)|(1<<SQLParserWORD)|(1<<SQLParserSTRING))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IParamContext is an interface to support dynamic dispatch.
type IParamContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParamContext differentiates from other interfaces.
	IsParamContext()
}

type ParamContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParamContext() *ParamContext {
	var p = new(ParamContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_param
	return p
}

func (*ParamContext) IsParamContext() {}

func NewParamContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParamContext {
	var p = new(ParamContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_param

	return p
}

func (s *ParamContext) GetParser() antlr.Parser { return s.parser }

func (s *ParamContext) PARAM_MARK() antlr.TerminalNode {
	return s.GetToken(SQLParserPARAM_MARK, 0)
}

func (s *ParamContext) ParamId() IParamIdContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IParamIdContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IParamIdContext)
}

func (s *ParamContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParamContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParamContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.EnterParam(s)
	}
}

func (s *ParamContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.ExitParam(s)
	}
}

func (p *SQLParser) Param() (localctx IParamContext) {
	localctx = NewParamContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, SQLParserRULE_param)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(93)
		p.Match(SQLParserPARAM_MARK)
	}
	{
		p.SetState(94)
		p.ParamId()
	}

	return localctx
}

// IParamIdContext is an interface to support dynamic dispatch.
type IParamIdContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParamIdContext differentiates from other interfaces.
	IsParamIdContext()
}

type ParamIdContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}
